Address spec review: cite sources, exact build config, native-image scope
Adds citations for the AvajeJex.start() and cross-processor pickup claims,
the exact build.gradle.kts plugin/dependency block, exact CounterController
code, and clarifies the GraalVM native-image and schema-duplication scope.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>